--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,8 @@ body {
 	margin:0;
 	font-family:sans-serif;
 	font-size:36px;
+	background-color: #eeeff1;
+	color: #1c2b60;
 }
 body * {
 	margin:auto auto;
@@ -13,7 +15,7 @@ body * {
 #answer {
 	font-size:2em;
 }
-#teams * {
+#teams li {
 	font-size:0.8em;
 	text-align:left;
 }
